gitops/apps/cachelab/overlays/staging/middleware-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: staging-basic-auth
spec:
  basicAuth:
    secret: staging-basic-auth
