gitops/apps/cachelab/overlays/staging/middleware-noindex.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: staging-noindex
spec:
  headers:
    customResponseHeaders:
      X-Robots-Tag: "noindex, nofollow, noarchive"
