gitops/apps/cachelab/overlays/staging/middleware-security.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: staging-security
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: false
    stsPreload: false
    forceSTSHeader: false

    contentTypeNosniff: true

    referrerPolicy: strict-origin-when-cross-origin

    permissionsPolicy: >-
      camera=(),
      microphone=(),
      geolocation=(),
      payment=(),
      usb=()
